2005-01-19  Sebastien Pouliot  <sebastien@ximian.com>

	* WebPermissionAttribute.cs: Fixed NET_1_1 behaviour.

2004-12-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConnectionStream.cs: remove unneeded check. Write detects and
	triggers the exception now.

2004-12-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AuthenticationManager.cs: don't lock on a public Type.
	* HttpWebRequest.cs: read the error response for auth. errors.

2004-12-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebRequest.cs: set webResponse back to null when redirecting.
	Fix the previous patch so that it reads the whole response even if
	auto-redirect is not enabled. Closes bug #70484.

2004-12-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebResponse.cs: added ReadAll method.

	* WebConnection.cs: in HandleError, set the response error after
	closing the socket. Use an async. delegate to finish reading any prior
	WebConnectionStream.

	* HttpWebRequest.cs: for error responses that allow content, read the
	stream immediately. Fixes bug #70483.

2004-12-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CookieContainer.cs: quote the port number.

2004-12-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConnection.cs:
	* WebConnectionStream.cs: removed TryReconnect. It's no longer needed.

2004-12-05 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConnection.cs: set the event in Close so that if the queue is
	empty, we won't block forever on next request. The finalizer was
	removed because we're not implementing IDisposable pattern here.

2004-12-04 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConnection.cs: handle errors on chunked streams. Fixes bug #66858.
	* ChunkStream.cs: added error checking all over.

	* HttpWebRequest.cs: throw the exception received in SetResponseError
	if we already have a response.
	(SetRequestData): Don't nest the exception if it's a WebException.

2004-12-03 Gonzalo Paniagua Javier <gonzalo@ximian.com>
